crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__basic-conversation.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "group": "typical",
        "language": [
          "eng"
        ],
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Minimal valid CHAT file with two speakers",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: basic utterances, three standard terminators (. ? !), simple words",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "want",
              "content": [
                {
                  "content": "want",
                  "type": "text"
                }
              ],
              "raw_text": "want",
              "type": "word"
            },
            {
              "cleaned_text": "some",
              "content": [
                {
                  "content": "some",
                  "type": "text"
                }
              ],
              "raw_text": "some",
              "type": "word"
            },
            {
              "cleaned_text": "cookies",
              "content": [
                {
                  "content": "cookies",
                  "type": "text"
                }
              ],
              "raw_text": "cookies",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "what",
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "type": "word"
            },
            {
              "cleaned_text": "kind",
              "content": [
                {
                  "content": "kind",
                  "type": "text"
                }
              ],
              "raw_text": "kind",
              "type": "word"
            },
            {
              "cleaned_text": "of",
              "content": [
                {
                  "content": "of",
                  "type": "text"
                }
              ],
              "raw_text": "of",
              "type": "word"
            },
            {
              "cleaned_text": "cookies",
              "content": [
                {
                  "content": "cookies",
                  "type": "text"
                }
              ],
              "raw_text": "cookies",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "chocolate",
              "content": [
                {
                  "content": "chocolate",
                  "type": "text"
                }
              ],
              "raw_text": "chocolate",
              "type": "word"
            },
            {
              "cleaned_text": "ones",
              "content": [
                {
                  "content": "ones",
                  "type": "text"
                }
              ],
              "raw_text": "ones",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "exclamation"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "we",
              "content": [
                {
                  "content": "we",
                  "type": "text"
                }
              ],
              "raw_text": "we",
              "type": "word"
            },
            {
              "cleaned_text": "can",
              "content": [
                {
                  "content": "can",
                  "type": "text"
                }
              ],
              "raw_text": "can",
              "type": "word"
            },
            {
              "cleaned_text": "make",
              "content": [
                {
                  "content": "make",
                  "type": "text"
                }
              ],
              "raw_text": "make",
              "type": "word"
            },
            {
              "cleaned_text": "some",
              "content": [
                {
                  "content": "some",
                  "type": "text"
                }
              ],
              "raw_text": "some",
              "type": "word"
            },
            {
              "cleaned_text": "together",
              "content": [
                {
                  "content": "together",
                  "type": "text"
                }
              ],
              "raw_text": "together",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "group": "typical",
        "language": [
          "eng"
        ],
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
