crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__braces.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "span": {
                "end": 155,
                "start": 154
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "believe",
                  "type": "text"
                }
              ],
              "raw_text": "believe",
              "span": {
                "end": 163,
                "start": 156
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "that",
                  "type": "text"
                }
              ],
              "raw_text": "that",
              "span": {
                "end": 168,
                "start": 164
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "it",
                  "type": "text"
                }
              ],
              "raw_text": "it",
              "span": {
                "end": 171,
                "start": 169
              },
              "type": "word"
            },
            {
              "text": "my car",
              "type": "freecode"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 185,
                "start": 183
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "stupid",
                  "type": "text"
                }
              ],
              "raw_text": "stupid",
              "span": {
                "end": 192,
                "start": 186
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
