crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__broken-question-terminator.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "test",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "test",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "span": {
                "end": 153,
                "start": 152
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "wonder",
                  "type": "text"
                }
              ],
              "raw_text": "wonder",
              "span": {
                "end": 160,
                "start": 154
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "if",
                  "type": "text"
                }
              ],
              "raw_text": "if",
              "span": {
                "end": 163,
                "start": 161
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "we",
                  "type": "text"
                }
              ],
              "raw_text": "we",
              "span": {
                "end": 166,
                "start": 164
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "should",
                  "type": "text"
                }
              ],
              "raw_text": "should",
              "span": {
                "end": 173,
                "start": 167
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "brokenquestion"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "span": {
                "end": 188,
                "start": 184
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "do",
                  "type": "text"
                }
              ],
              "raw_text": "do",
              "span": {
                "end": 191,
                "start": 189
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "span": {
                "end": 195,
                "start": 192
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "think",
                  "type": "text"
                }
              ],
              "raw_text": "think",
              "span": {
                "end": 201,
                "start": 196
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "brokenquestion"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "test",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "test",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
